# clinfo

./: CMakeLists.txt
cmake/Modules/: CompileWithWarnings.cmake
